# ChangeLog for app-misc/cl-office-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-office-meta-11.0-r1 (25 Nov 2010)

  25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-office-meta-11.0.ebuild, +cl-office-meta-11.0-r1.ebuild:
  Renamed USE flag to CDISTRO.

*cl-office-meta-11.0 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-office-meta-11.0.ebuild:
  New meta-package for Calculate Linux.
