@@ -1,2 +1,2 @@
-EBUILD cl-office-meta-11.0-r2.ebuild 1309 RMD160 86fafae6d346a1b44c67b64b9e043b743d0f878f SHA1 23786f1884c2fdb5fe6cdccd3fd2749659037f81 SHA256 0763fffa83f4772677bbd481d65919bf85a4352e64e9540cc85a13ed26fa09ce
-MISC ChangeLog 496 RMD160 61536313cb98dce6ba734bf9948e94941d394bd7 SHA1 7ca9f273406b3ef4db00d4b5db4475db2cfed798 SHA256 001464dc34d05b0ebebcbccadb844a4fe4c0ba463a4345434ba23a6230101d6f
+EBUILD cl-office-meta-11.0-r3.ebuild 1332 RMD160 36f8e60b9ba15fa9c9f9a7fce287aa96aba3ecbc SHA1 7feceabce828bdb728934fb69828a21b2be9162e SHA256 f71f92b0c4187f43600736566203fc9303bae6ff08f206243a9298dce85b91a5
+MISC ChangeLog 729 RMD160 24230a2ec2f2586315dafdf993ed122f168074b9 SHA1 16a13ab90ac8e9db9d1f955a4d616e8d82217cc3 SHA256 09660548274f17c33b9832839a4c3127ae25e8b023eace8095c488f93272b7ca
