@@ -1,2 +1,3 @@
 EBUILD cl-xfce-meta-4.6.ebuild 821 RMD160 0ddaca976523bf2b9eb84b4b566748503b54be2a SHA1 168c86882b6a7fc265db90441dcc25e06fb497eb SHA256 782e3ef71352c7a2e08b381355ec0c446ce278f9727fdc558d362f32b6d92357
-MISC ChangeLog 397 RMD160 fa6cc2cf30b765ea9645d9df43cdc04c1fef7ecc SHA1 f3f24fb33787f0d9308680147561b966f2dae278 SHA256 9eb349f55a03067fa67bcc0859b2d6ca4ad6aa181b616b945fd5075fce6ebb85
+EBUILD cl-xfce-meta-4.8.ebuild 875 RMD160 04bd5d766d91f85cd83fa4078de281b476d9dc73 SHA1 c157352f089ca59d2fa323267902b7c533ae8488 SHA256 49c04b727fee723fc11ea635658788c1df7ae4f20a6f218462df4560f6f0c22c
+MISC ChangeLog 547 RMD160 5365c08f370d8e734843013117992fca67ee635a SHA1 8d39da6cde89e23b87979c66c4eacae8c7d6e934 SHA256 5f11877bcf36a7772f50b90f664cfcf56c9022d7ff0306eea1a8d49c65be4b6b
