@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cl-xfce-meta
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cl-xfce-meta-4.8 (23 Jan 2011)
+
+  23 Jan 2011; Трацевский Александр <alex@gentoo.org>
+  +cl-xfce-meta-4.8.ebuild:
+  version bump
 
   15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cl-xfce-meta-4.6.ebuild:
