@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cl-office-meta
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cl-office-meta-11.0-r3 (23 Jan 2011)
+
+  23 Jan 2011; Трацевский Александр <alex@gentoo.org>
+  -cl-office-meta-11.0-r2.ebuild, +cl-office-meta-11.0-r3.ebuild:
+  Replace app-editors/mousepad to app-editors/leafpad
 
 *cl-office-meta-11.0-r1 (25 Nov 2010)
 
